# openMPTask

./: CMakeLists.txt  main.cpp
